# rfx20-predictor

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml
config/: __init__.py  settings.py  splits.yaml
docs/decisions/: README.md  dividends_and_splits.md  splits_adjustment.md
evaluation/: __init__.py
features/: __init__.py
ingestion/: __init__.py  auth.py  base.py  composition.py  composition_runner.py  instruments.py  macro.py  pipeline.py  pipeline_runner.py  primary_rest.py
models/: __init__.py
models/deep_learning/: __init__.py
models/ml/: __init__.py
models/statistical/: __init__.py
processing/: __init__.py  adjustments.py  splits.py
scripts/: validate_variation.py
storage/: __init__.py  store.py
tests/: smoke_test_ingestion.py  test_ingestion.py
