[project]
name = "rfx20-predictor"
version = "0.1.0"
description = "Modular ML pipeline for predicting the RFX20 Argentine market index"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "pydantic-settings>=2.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    # pandas as compatibility layer (e.g. for libraries that don't support polars yet)
    "pandas>=2.0",
    "httpx>=0.28.1",
    "tenacity>=8.2",
    "pytz>=2024.1",
    "streamlit>=1.35",
    "plotly>=5.20",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
# CPU-only PyTorch for local development (Ubuntu, no GPU)
# Install with: uv sync --extra cpu
cpu = [
    "torch>=2.2; sys_platform == 'linux'",
    "torchvision>=0.17; sys_platform == 'linux'",
]

# Standard PyTorch for Google Colab (GPU available)
# Install with: uv sync --extra colab
colab = [
    "torch>=2.2",
    "torchvision>=0.17",
]

[tool.uv]
# Point to PyTorch CPU wheel index so uv resolves the CPU-only build
# when installing the [cpu] extra on Linux.
# Reference: https://pytorch.org/get-started/locally/
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "storage",
    "ingestion",
    "processing",
    "features",
    "models",
    "evaluation",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
